# vibe-forms

./: Cargo.toml  README.md
apps/web_app/: Cargo.toml
apps/web_app/src/: form_types.rs  main.rs
libs/form_macro/: Cargo.toml
libs/form_macro/src/: lib.rs
