[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
# picks the versions declared in [workspace.dependencies]
axum        = { workspace = true }
maud        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
form_macro  = { workspace = true }
surrealdb = { version = "2.3.3", features = ["kv-mem", "protocol-ws"] }
